--- a/css/main.scss
+++ b/css/main.scss
@@ -52,5 +52,6 @@ $on-laptop:        800px;
         "bourbon/bourbon",
         "base/base",
         "neat/neat",
-        "resume"
+        "resume",
+        "projects"
 ;
