--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,11 @@ layout: default
 ---
 <div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+  <header class="post-header" {% if page.image %}style="background-image:url({{page.image}}); {{page.extra_css}}"{% endif %}>
+        <h1 class="post-title">{{ page.title }}</h1>
   </header>
+
+  <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
 
   <article class="post-content">
     {{ content }}
