--- a/css/main.scss
+++ b/css/main.scss
@@ -56,6 +56,7 @@ $badge-font-size: 0.75em !default;
         "base/base",
         "neat/neat",
         "posts",
+        "mainpage",
         "projects"
 
 ;
