--- a/css/main.scss
+++ b/css/main.scss
@@ -57,6 +57,7 @@ $badge-font-size: 0.75em !default;
         "neat/neat",
         "posts",
         "mainpage",
-        "projects"
+        "projects",
+        "resume"
 
 ;
