--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -35,4 +35,18 @@
           padding: 0 0.2em;
         }
     }
+
+    @media screen and (max-width: 920px) {
+        h3 .time {
+            display: block;
+            width: 100%;
+            padding: 5px 0;
+        }
+        h4 {
+            margin-left: 0;
+        }
+        h2, p, ul, {
+            margin-left: 5px;
+        }
+    }
 }
