--- a/_sass/_mainpage.scss
+++ b/_sass/_mainpage.scss
@@ -52,7 +52,7 @@
                   display: inline-block;
                   padding-left: 10px;
                   font-weight: 900;
-                  content: "·";
+                  content: '\b7\a0';
                 }
             }
         }
