--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -41,9 +41,12 @@
   }
 
   .post-content {
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 200;
     text-align: justify;
+    > blockquote {
+      font-style: unset;
+    }
   }
 }
 
