add saas pricing ebook

--- a/css/main.scss
+++ b/css/main.scss
@@ -65,5 +65,6 @@ $badge-font-size: 0.75em !default;
         "posts",
         "mainpage",
         "projects",
+        "ebook",
         "resume"
 ;
