publish FOSDEM talk

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -47,6 +47,11 @@
     > blockquote {
       font-style: unset;
     }
+    video, iframe {
+      display: block;
+      margin: 0 auto;
+      max-width: 100%;
+    }
   }
 }
 
