--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,5 +80,5 @@
         </li>
       </ul>
     </p>
-  <h2><a href="/">GNUnicorn</a></h2>
+  <h2><a class="rainbow" href="/">GNUnicorn</a></h2>
 </footer>
