switching to unterbau hosting

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,5 +80,5 @@
         </li>
       </ul>
     </p>
-  <h2><img style="height: 0.8em; width: 0.8em" src="/assets/images/copyleft.svg"> 2009-{{site.time | date:'%Y'}} <a class="rainbow" href="/">GNUnicorn</a></h2>
+  <h2>hosted on <a href="https://unterbau.tech">Unterbau.tech</a><br/><img style="height: 0.8em; width: 0.8em" src="/assets/images/copyleft.svg"> 2009-{{site.time | date:'%Y'}} <a class="rainbow" href="/">GNUnicorn</a></h2>
 </footer>
