--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -1,26 +1,54 @@
+
+.resume-head {
+  @media print {
+    display: flex;
+    .avatar {
+      max-width: 150px;
+      max-height: 150px;
+    }
+    h4 {
+        font-size: 0.85em;
+    }
+    .socialicon {
+      width: 1em;
+    }
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      li {
+        margin-right: 2em;
+        white-space: nowrap;
+      }
+    }
+  }
+}
+
 .resume {
     letter-spacing: 1px;
     h2 {
         text-transform: uppercase;
         line-height: 2em;
-        font-size: 20px;
+        font-size: 12px;
         margin-top: 30px;
 
-        @media print {
-          font-size: 14px;
+        @media screen {
+          font-size: 20px;
         }
     }
     h3 {
         text-transform: uppercase;
         margin: 40px 0 10px;
-        font-size: 18px;
-        @media print {
-          font-size: 14px;
+        font-size: 12px;
+        @media screen {
+          font-size: 18px;
         }
 
         .time {
-          width: 20vw;
-          padding: 0 2em;
+          padding-right: 2em;
+          @media screen {
+            width: 20vw;
+            padding: 0 2em;
+          }
           display: inline-block;
           font-size: 0.9em;
         }
@@ -33,7 +61,10 @@
 
     h4, p, ul {
         letter-spacing: 0.2px;
-        margin-left: 20vw;
+
+        @media screen {
+          margin-left: 20vw;
+        }
         p {
             margin-left: 0;
         }
@@ -46,15 +77,6 @@
 
     @media print {
       font-size: 12px;
-      h2 {
-        font-size: 16px;
-      }
-      h3 {
-        font-size: 14px;
-        .time {
-          padding: 0;
-        }
-      }
     }
 
     @media screen and (max-width: 920px) {
