--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,10 @@
     </g>
 </svg></a>
         </li>
+        <li><a href="https://matrix.to/#/@gnunicorn:matrix.org">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 66 56" fill="#fff" fill-rule="evenodd" stroke="#000" stroke-linecap="round" stroke-linejoin="round"><use xlink:href="#A" x=".5" y=".5"/><symbol id="A" overflow="visible"><g stroke="none" fill-rule="nonzero"><path d="M49.46 37.36h-5.32c-.178 0-.323-.145-.323-.323V26.06l-.074-1.808c-.047-.53-.173-.992-.376-1.376a2.2 2.2 0 0 0-.868-.883c-.38-.22-.93-.332-1.62-.332s-1.238.13-1.647.382-.743.597-.976 1a4.21 4.21 0 0 0-.486 1.462c-.085.567-.128 1.15-.128 1.732v10.8c0 .178-.145.323-.323.323H32c-.178 0-.323-.145-.323-.323V26.18l-.037-1.7c-.024-.524-.124-1.013-.297-1.45-.164-.415-.43-.74-.814-.992s-.972-.378-1.752-.378c-.22 0-.527.053-.908.157-.368.1-.732.294-1.08.577s-.65.694-.904 1.235-.382 1.27-.382 2.167v11.24c0 .178-.144.323-.323.323h-5.32c-.178 0-.323-.145-.323-.323v-19.37c0-.178.145-.322.323-.322h5.02c.178 0 .323.145.323.322v1.794c.618-.726 1.33-1.315 2.125-1.757 1.032-.574 2.225-.865 3.548-.865 1.265 0 2.44.25 3.5.743.934.44 1.68 1.17 2.224 2.18.556-.703 1.263-1.34 2.108-1.895 1.036-.682 2.274-1.028 3.68-1.028 1.048 0 2.036.13 2.937.387.917.263 1.715.7 2.373 1.267s1.18 1.348 1.548 2.278c.363.922.547 2.04.547 3.323v12.964c0 .178-.145.323-.323.323z" opacity=".5"/><path d="M24.88 17.675v2.623h.075c.7-.998 1.542-1.774 2.53-2.323s2.117-.824 3.39-.824c1.224 0 2.342.238 3.353.712s1.78 1.31 2.305 2.51c.574-.85 1.355-1.6 2.342-2.248s2.154-.974 3.504-.974c1.024 0 1.973.125 2.848.375s1.623.65 2.248 1.2 1.11 1.268 1.462 2.154.525 1.955.525 3.204v12.964h-5.32V26.07l-.075-1.836c-.05-.574-.187-1.073-.412-1.5s-.556-.762-.993-1.012-1.03-.374-1.78-.374-1.355.145-1.817.43a3.12 3.12 0 0 0-1.087 1.124c-.263.461-.437.987-.524 1.574s-.132 1.184-.131 1.78v10.79H32V26.182l-.037-1.705c-.025-.562-.13-1.08-.32-1.556s-.5-.855-.937-1.143-1.08-.43-1.93-.43c-.25 0-.58.056-.993.17a3.3 3.3 0 0 0-1.199.637c-.388.313-.718.762-.993 1.35s-.412 1.355-.412 2.304v11.24h-5.32V17.675z" opacity=".5"/><path d="M1.432 1.244v51.833h3.73v1.244H0V0h5.162v1.243zm20.788 16.43v2.623h.075c.7-.998 1.542-1.774 2.53-2.323s2.117-.824 3.4-.824c1.224 0 2.342.238 3.353.712s1.78 1.3 2.305 2.5c.574-.85 1.355-1.6 2.342-2.248s2.154-.974 3.504-.974c1.024 0 1.973.125 2.848.375s1.623.65 2.248 1.2 1.1 1.268 1.462 2.154.525 1.955.525 3.204v12.964h-5.32V26.06l-.075-1.836c-.05-.574-.187-1.073-.412-1.5s-.556-.762-.993-1.012-1.03-.374-1.78-.374-1.355.145-1.817.43a3.12 3.12 0 0 0-1.087 1.124c-.263.46-.437.987-.524 1.574s-.132 1.184-.131 1.78v10.8h-5.32V26.182l-.037-1.705c-.025-.562-.13-1.08-.32-1.556s-.5-.855-.937-1.143-1.08-.43-1.93-.43c-.25 0-.58.056-.993.17a3.3 3.3 0 0 0-1.199.637c-.388.313-.718.762-.993 1.35s-.412 1.355-.412 2.304v11.24H17.2V17.675zm40.348 35.402V1.244h-3.73V0H64v54.32h-5.162v-1.244z" fill="#000"/></g></symbol></svg>
+        </a>
+        </li>
         <li><a href="http://t.me/gnunicorn"><svg viewBox="0 0 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
           <g>
               <path d="M128,0 C57.307,0 0,57.307 0,128 L0,128 C0,198.693 57.307,256 128,256 L128,256 C198.693,256 256,198.693 256,128 L256,128 C256,57.307 198.693,0 128,0 L128,0 Z" fill="#40B3E0"/>
@@ -16,6 +20,35 @@
               <path d="M122.9015,168.1154 L102.0335,187.1414 C102.0335,187.1414 100.4025,188.3794 98.6175,187.6034 L102.6135,152.2624" fill="#B5CFE4"/>
           </g>
       </svg></a></li>
+      <li>
+        <a href="https://de.linkedin.com/in/benjaminkampmann"><svg
+           xmlns:dc="http://purl.org/dc/elements/1.1/"
+           xmlns:cc="http://creativecommons.org/ns#"
+           xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+           xmlns:svg="http://www.w3.org/2000/svg"
+           xmlns="http://www.w3.org/2000/svg"
+           id="svg2"
+           preserveAspectRatio="xMidYMid"
+           version="1.1"
+           viewBox="0 0 130 130">
+          <g
+             transform="translate(-381.56748,0.212655)"
+             id="g4">
+            <path
+               style="fill:#006087"
+               id="path18"
+               d="M 501.7636,0 391.34257,0 c -5.27657,0 -9.56334,4.1823831 -9.56334,9.3392759 l 0,110.8853441 c 0,5.16139 4.28677,9.35007 9.56334,9.35007 l 110.42103,0 c 5.28557,0 9.59213,-4.18868 9.59213,-9.35007 l 0,-110.8853441 C 511.35573,4.1823831 507.04917,0 501.7636,0" />
+            <path
+               style="fill:#ffffff"
+               id="path20"
+               d="m 410.6033,17.839016 c 6.1458,0 11.13803,4.993125 11.13803,11.139824 0,6.151199 -4.99223,11.146123 -11.13803,11.146123 -6.15839,0 -11.14432,-4.994924 -11.14432,-11.146123 0,-6.146699 4.98593,-11.139824 11.14432,-11.139824 l 0,0 z m -9.61282,30.738896 19.21845,0 0,61.836818 -19.21845,0 0,-61.836818 z" />
+            <path
+               style="fill:#ffffff"
+               id="path22"
+               d="m 432.26297,48.577912 18.4365,0 0,8.44845 0.25555,0 c 2.5645,-4.860851 8.83448,-9.987149 18.18365,-9.987149 19.4614,0 23.0544,12.807198 23.0544,29.456646 l 0,33.918871 -19.20495,0 0,-30.071222 c 0,-7.174299 -0.13228,-16.397498 -9.98715,-16.397498 -10.00155,0 -11.53305,7.812275 -11.53305,15.878299 l 0,30.590421 -19.20495,0 0,-61.836818" />
+          </g>
+        </svg></a>
+      </li>
         <li>
           <a href="https://dev.to/gnunicorn">
             <svg xmlns="http://www.w3.org/2000/svg" version="1" width="20%" height="20%" viewBox="0 0 132 65" role="img" aria-labelledby="aam33ip039v54e9ttyaamhtl03r9rrnf" class="logo"><title id="aam33ip039v54e9ttyaamhtl03r9rrnf">App logo</title>
@@ -27,35 +60,6 @@
           <a href="https://www.reddit.com/user/gnunicorn">
             <svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1095 1167q16 16 0 31-62 62-199 62t-199-62q-16-15 0-31 6-6 15-6t15 6q48 49 169 49 120 0 169-49 6-6 15-6t15 6zm-307-181q0 37-26 63t-63 26-63.5-26-26.5-63q0-38 26.5-64t63.5-26 63 26.5 26 63.5zm395 0q0 37-26.5 63t-63.5 26-63-26-26-63 26-63.5 63-26.5 63.5 26 26.5 64zm251-120q0-49-35-84t-85-35-86 36q-130-90-311-96l63-283 200 45q0 37 26 63t63 26 63.5-26.5 26.5-63.5-26.5-63.5-63.5-26.5q-54 0-80 50l-221-49q-19-5-25 16l-69 312q-180 7-309 97-35-37-87-37-50 0-85 35t-35 84q0 35 18.5 64t49.5 44q-6 27-6 56 0 142 140 243t337 101q198 0 338-101t140-243q0-32-7-57 30-15 48-43.5t18-63.5zm358 30q0 182-71 348t-191 286-286 191-348 71-348-71-286-191-191-286-71-348 71-348 191-286 286-191 348-71 348 71 286 191 191 286 71 348z"/></svg>
           </a>
-        </li>
-        <li>
-          <a href="https://de.linkedin.com/in/benjaminkampmann"><svg
-             xmlns:dc="http://purl.org/dc/elements/1.1/"
-             xmlns:cc="http://creativecommons.org/ns#"
-             xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-             xmlns:svg="http://www.w3.org/2000/svg"
-             xmlns="http://www.w3.org/2000/svg"
-             id="svg2"
-             preserveAspectRatio="xMidYMid"
-             version="1.1"
-             viewBox="0 0 130 130">
-            <g
-               transform="translate(-381.56748,0.212655)"
-               id="g4">
-              <path
-                 style="fill:#006087"
-                 id="path18"
-                 d="M 501.7636,0 391.34257,0 c -5.27657,0 -9.56334,4.1823831 -9.56334,9.3392759 l 0,110.8853441 c 0,5.16139 4.28677,9.35007 9.56334,9.35007 l 110.42103,0 c 5.28557,0 9.59213,-4.18868 9.59213,-9.35007 l 0,-110.8853441 C 511.35573,4.1823831 507.04917,0 501.7636,0" />
-              <path
-                 style="fill:#ffffff"
-                 id="path20"
-                 d="m 410.6033,17.839016 c 6.1458,0 11.13803,4.993125 11.13803,11.139824 0,6.151199 -4.99223,11.146123 -11.13803,11.146123 -6.15839,0 -11.14432,-4.994924 -11.14432,-11.146123 0,-6.146699 4.98593,-11.139824 11.14432,-11.139824 l 0,0 z m -9.61282,30.738896 19.21845,0 0,61.836818 -19.21845,0 0,-61.836818 z" />
-              <path
-                 style="fill:#ffffff"
-                 id="path22"
-                 d="m 432.26297,48.577912 18.4365,0 0,8.44845 0.25555,0 c 2.5645,-4.860851 8.83448,-9.987149 18.18365,-9.987149 19.4614,0 23.0544,12.807198 23.0544,29.456646 l 0,33.918871 -19.20495,0 0,-30.071222 c 0,-7.174299 -0.13228,-16.397498 -9.98715,-16.397498 -10.00155,0 -11.53305,7.812275 -11.53305,15.878299 l 0,30.590421 -19.20495,0 0,-61.836818" />
-            </g>
-          </svg></a>
         </li>
         <li>
           <a href="https://www.github.com/gnunicorn/"><svg viewBox="0 0 256 250" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
